--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -3953,7 +3953,7 @@ kg
                 }];
                 idol.idol_story_list = [{
                     "story_id": "469",
-                    "story_title": "ブルーミングシャイン",
+                    "story_title": "聖き街の灯",
                     "voice_enable": ["1", "1"],
                     "flash_path": ["../../idol_story/movie_play/469/1.html", 
                                    "../../idol_story/movie_play/469/2.html"],
