--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -221,6 +221,10 @@
                         </div>
                         <div class="idol" style="background:url(../../image_sp/card/xs/momoka_38.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="37">
                         </div>
+                        <div class="idol" style="background:url(../../image_sp/card/xs/momoka_39.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="38">
+                        </div>
+                        <div class="idol" style="background:url(../../image_sp/card/xs/momoka_40.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="39">
+                        </div>
                     </div>
                 </li>
             </ul>
@@ -3788,8 +3792,180 @@ kg
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[성스러운 거리의 등불]사쿠라이 모모카",
+                        "rarity": "5",
+                        "cost": "26",
+                        "attribute": "cute",
+                        "skill_name": "あたたかな奇跡",
+                        "skill_effect": "ｷｭｰﾄ･ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 究極ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "8540",
+                        "default_defense": "6560",
+                        "hash_card_id": "7241b1dcfc35c989d89d158739ea9d1a",
+                        "alias_name": "성스러운 거리의 등불",
+                        "real_name": "사쿠라이 모모카"
+                    },
+                    "profile": {
+                        "card_id": "1468201",
+                        "card_name": "[聖き街の灯]櫻井桃華",
+                        "card_kana": "사쿠라이 모모카",
+                        "card_age": "12",
+                        "card_from": "고베",
+                        "card_height": "145",
+                        "card_weight": "39",
+                        "card_bust": "72",
+                        "card_waist": "53",
+                        "card_hip": "75",
+                        "card_birthday": "4월 8일",
+                        "card_constellation": "양자리",
+                        "card_blood": "A",
+                        "card_arm": "오른쪽",
+                        "card_hobby": "티타임",
+                        "card_cv": "照井春佳"
+                    },
+                    "comments": {
+                        "comment": "저기, 봐주셨으면 해요! 사랑스러운 인형들이지 않나요! 어머, 산타님도 왔네요♪ 저기, OO 쨔마. 저희들도 작아져서 섞여들면, 즐거을 거라고 생각하지 않나요?",
+                        "comments_my_1": "멋진 동료들과… 메리 크리스마스.",
+                        "comments_my_2": "기쁨이 영원히 이어지기를…",
+                        "comments_my_3": "거리가 반짝반짝하고, 노래하는 것처럼♪",
+                        "comments_my_4": "인형 놀이는 레이디의 비밀이에요♪ 흥미가 있으신지?",
+                        "comments_my_max": "산타님이라면, 바로 곁에… 많은 선물을 주시는 사람이에요♪",
+                        "comments_work_1": "즐거운 듯한 목소리가 울려퍼지고 있어요.",
+                        "comments_work_2": "가만히 지켜보는 게 바른 몸가짐이네요.",
+                        "comments_work_3": "함께 살면 두근두근이네요♪",
+                        "comments_work_4": "두사람 동행인 분들로 가득이네요. 손을 잡고 계신 분도…",
+                        "comments_work_max": "저 인형이 OO 쨔마라면… 그 옆이 저예요.",
+                        "comments_work_love_up": "아, 그래요! OO 쨔마께도 하얀 수염을… 우후후♪",
+                        "comments_live": "저기, 자, 좀더 곁으로!",
+                        "comments_love_max": "이 작은 세계를 지키고 싶다, 고 문득 생각했어요. OO 쨔마와 둘이서, 손을 맞잡고, 성야의 기적을 자아내어…"
+                    },
+                    "voice": {
+                        "comment": "../../sound/1468201/idolcomment.mp3",
+                        "comments_my_1": "../../sound/1468201/my_1.mp3",
+                        "comments_my_2": "../../sound/1468201/my_2.mp3",
+                        "comments_my_3": "../../sound/1468201/my_3.mp3",
+                        "comments_my_4": "../../sound/1468201/my_4.mp3",
+                        "comments_my_max": "../../sound/1468201/my_max.mp3",
+                        "comments_work_1": "../../sound/1468201/work_1.mp3",
+                        "comments_work_2": "../../sound/1468201/work_2.mp3",
+                        "comments_work_3": "../../sound/1468201/work_3.mp3",
+                        "comments_work_4": "../../sound/1468201/work_4.mp3",
+                        "comments_work_max": "../../sound/1468201/work_max.mp3",
+                        "comments_work_love_up": "../../sound/1468201/work_love_up.mp3",
+                        "comments_live": "../../sound/1468201/live.mp3",
+                        "comments_love_max": "../../sound/1468201/love_max.mp3"
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8F%E3%82%89%E3%81%84%E3%82%82%E3%82%82%E3%81%8B",
+                    "premium_sign_idol_base_id": "15",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/15_sign_effect",
+                    "archive": {
+                        "normal": "0",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[성스러운 거리의 등불]사쿠라이 모모카+",
+                        "rarity": "6",
+                        "cost": "26",
+                        "attribute": "cute",
+                        "skill_name": "あたたかな奇跡",
+                        "skill_effect": "ｷｭｰﾄ･ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 究極ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "10248",
+                        "default_defense": "7872",
+                        "skill_effect_2": "ｷｭｰﾄ･ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 極小ｱｯﾌﾟ",
+                        "hash_card_id": "90f3354270e087ce1478a0463b759c5b",
+                        "alias_name": "성스러운 거리의 등불",
+                        "real_name": "사쿠라이 모모카+"
+                    },
+                    "profile": {
+                        "card_id": "1568202",
+                        "card_name": "[聖き街の灯]櫻井桃華+",
+                        "card_kana": "사쿠라이 모모카",
+                        "card_age": "12",
+                        "card_from": "고베",
+                        "card_height": "145",
+                        "card_weight": "39",
+                        "card_bust": "72",
+                        "card_waist": "53",
+                        "card_hip": "75",
+                        "card_birthday": "4월 8일",
+                        "card_constellation": "양자리",
+                        "card_blood": "A",
+                        "card_arm": "오른쪽",
+                        "card_hobby": "티타임",
+                        "card_cv": "照井春佳"
+                    },
+                    "comments": {
+                        "comment": "크리스마스는, 아이들에게 있어 특별한 날. 어느 창 너머에도, 웃음소리와, 요리의 향기가 가득 차있겠죠, 분명. …오늘밤, 모든 사람들의 속에, 따뜻한 기적이 찾아오길…",
+                        "comments_my_1": "멋진 동료들과… 메리 크리스마스.",
+                        "comments_my_2": "기쁨이 영원히 이어지기를…",
+                        "comments_my_3": "서로 돕는 마음이야말로, 고귀한 거예요.",
+                        "comments_my_4": "어른이 되어서도, 오늘밤의 추억이 가슴 속에 남아 있기를…",
+                        "comments_my_max": "OO 쨔마도 곁에. 함께 기적을 지켜보죠.",
+                        "comments_work_1": "즐거운 듯한 목소리가 울려퍼지고 있어요.",
+                        "comments_work_2": "가만히 지켜보는 게 바른 몸가짐이네요.",
+                        "comments_work_3": "천사의 날개는 모두의 등에도…",
+                        "comments_work_4": "어머어머, 냄비요리가 뿜어져 나오네요… 어머, 시원시원 믿음직하기도 해라♪",
+                        "comments_work_max": "OO 쨔마도 크리스미스에는 안절부절 못해서… 후후, 귀여워♪",
+                        "comments_work_love_up": "어머, 당신에겐 제 모습이 보이는 건가요? 라니♪",
+                        "comments_live": "곁에서 지키고 있어요.",
+                        "comments_love_max": "언제나 느끼고 있어요. 곁에서 지켜봐주는, 따뜻한 눈길. OO 쨔마… 기적이란, 분명 사랑인 거네요."
+                    },
+                    "voice": {
+                        "comment": "../../sound/1568202/idolcomment.mp3",
+                        "comments_my_1": "../../sound/1568202/my_1.mp3",
+                        "comments_my_2": "../../sound/1568202/my_2.mp3",
+                        "comments_my_3": "../../sound/1568202/my_3.mp3",
+                        "comments_my_4": "../../sound/1568202/my_4.mp3",
+                        "comments_my_max": "../../sound/1568202/my_max.mp3",
+                        "comments_work_1": "../../sound/1568202/work_1.mp3",
+                        "comments_work_2": "../../sound/1568202/work_2.mp3",
+                        "comments_work_3": "../../sound/1568202/work_3.mp3",
+                        "comments_work_4": "../../sound/1568202/work_4.mp3",
+                        "comments_work_max": "../../sound/1568202/work_max.mp3",
+                        "comments_work_love_up": "../../sound/1568202/work_love_up.mp3",
+                        "comments_live": "../../sound/1568202/live.mp3",
+                        "comments_love_max": "../../sound/1568202/love_max.mp3"
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8F%E3%82%89%E3%81%84%E3%82%82%E3%82%82%E3%81%8B",
+                    "premium_sign_idol_base_id": "15",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/15_sign_effect",
+                    "archive": {
+                        "normal": "0",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
                 }];
                 idol.idol_story_list = [{
+                    "story_id": "469",
+                    "story_title": "성스러운 거리의 등불",
+                    "voice_enable": ["1", "1"],
+                    "flash_path": ["../../idol_story/movie_play/469/1.html", 
+                                   "../../idol_story/movie_play/469/2.html"],
+                    "voice_url": ["../../idol_story/sound_play/469/1.html", 
+                                  "../../idol_story/sound_play/469/2.html"],
+                    "open_flag": ["1", "1"],
+                    "icon": ["../../image_sp/ui/episode/base/015.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_469_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cute_early.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
+                }, {
                     "story_id": "416",
                     "story_title": "봉사하겠습니다♪ 모모카와 미오의 클래시컬 메이드",
                     "voice_enable": {
@@ -4022,7 +4198,9 @@ kg
                           "../../image_sp/card_sign_b/l/momoka_35.jpg", 
                           "../../image_sp/card_sign_b/l/momoka_36.jpg", 
                           "../../image_sp/card_sign_b/l/momoka_37.jpg", 
-                          "../../image_sp/card_sign_b/l/momoka_38.jpg"],
+                          "../../image_sp/card_sign_b/l/momoka_38.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_39.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_40.jpg"],
                     "l_premium": {
                         "4": "../../image_sp/card_sign_p/l/momoka_05.jpg",
                         "5": "../../image_sp/card_sign_p/l/momoka_06.jpg",
@@ -4055,7 +4233,9 @@ kg
                         "34": "../../image_sp/card_sign_p/l/momoka_35.jpg",
                         "35": "../../image_sp/card_sign_p/l/momoka_36.jpg",
                         "36": "../../image_sp/card_sign_p/l/momoka_37.jpg",
-                        "37": "../../image_sp/card_sign_p/l/momoka_38.jpg"
+                        "37": "../../image_sp/card_sign_p/l/momoka_38.jpg",
+                        "38": "../../image_sp/card_sign_p/l/momoka_39.jpg",
+                        "39": "../../image_sp/card_sign_p/l/momoka_40.jpg"
                     },
                     "l_nosign": ["", 
                                  "", 
@@ -4094,7 +4274,9 @@ kg
                                  "../../image_sp/card/l/momoka_35.jpg", 
                                  "../../image_sp/card/l/momoka_36.jpg", 
                                  "../../image_sp/card/l/momoka_37.jpg", 
-                                 "../../image_sp/card/l/momoka_38.jpg"],
+                                 "../../image_sp/card/l/momoka_38.jpg", 
+                                 "../../image_sp/card/l/momoka_39.jpg", 
+                                 "../../image_sp/card/l/momoka_40.jpg"],
                     "l_nosign_p": {
                         "4": "../../image_sp/card_sign_no_p/l/momoka_05.jpg",
                         "5": "../../image_sp/card_sign_no_p/l/momoka_06.jpg",
@@ -4127,7 +4309,9 @@ kg
                         "34": "../../image_sp/card_sign_no_p/l/momoka_35.jpg",
                         "35": "../../image_sp/card_sign_no_p/l/momoka_36.jpg",
                         "36": "../../image_sp/card_sign_no_p/l/momoka_37.jpg",
-                        "37": "../../image_sp/card_sign_no_p/l/momoka_38.jpg"
+                        "37": "../../image_sp/card_sign_no_p/l/momoka_38.jpg",
+                        "38": "../../image_sp/card_sign_no_p/l/momoka_39.jpg",
+                        "39": "../../image_sp/card_sign_no_p/l/momoka_40.jpg"
                     },
                     "l_noframe": [null, 
                                   null, 
@@ -4166,7 +4350,9 @@ kg
                                   "../../image_sp/card/l_noframe/momoka_35.jpg", 
                                   "../../image_sp/card/l_noframe/momoka_36.jpg", 
                                   "../../image_sp/card/l_noframe/momoka_37.jpg", 
-                                  "../../image_sp/card/l_noframe/momoka_38.jpg"],
+                                  "../../image_sp/card/l_noframe/momoka_38.jpg", 
+                                  "../../image_sp/card/l_noframe/momoka_39.jpg", 
+                                  "../../image_sp/card/l_noframe/momoka_40.jpg"],
                     "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
                     "mask_l2": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
                     "mask_l_p": [],
@@ -4208,7 +4394,9 @@ kg
                            "../../image_sp/card/xs/momoka_35.jpg", 
                            "../../image_sp/card/xs/momoka_36.jpg", 
                            "../../image_sp/card/xs/momoka_37.jpg", 
-                           "../../image_sp/card/xs/momoka_38.jpg"],
+                           "../../image_sp/card/xs/momoka_38.jpg", 
+                           "../../image_sp/card/xs/momoka_39.jpg", 
+                           "../../image_sp/card/xs/momoka_40.jpg"],
                     "m2": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/m2/1cefdef7df7c14eca803910b67e61dfc.jpg", 
                            "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/m2/fe2f3ecbf682014be99d3f94512a48bd.jpg", 
                            "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/m2/2b676cf6e1bd042f04a6e8367ac47fdd.jpg", 
