--- a/idol_gallery/idol_detail/fumika.html
+++ b/idol_gallery/idol_detail/fumika.html
@@ -227,6 +227,14 @@
                         </div>
                     </div>
                 </li>
+                <li style="width: 318px;padding-left: 2px">
+                    <div class="displayBox">
+                        <div class="idol" style="background:url(../../image_sp/card/xs/fumika_41.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="40">
+                        </div>
+                        <div class="idol" style="background:url(../../image_sp/card/xs/fumika_42.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="41">
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
         <ol class="icon_navi" style="position:relative;margin-bottom: -1px;margin-top: -7px;">
@@ -238,6 +246,7 @@
             <li><a>6</a></li>
             <li><a>7</a></li>
             <li><a>8</a></li>
+            <li><a>9</a></li>
         </ol>
         <div id="tab-content" style="position:relative;z-index:1">
         </div>
@@ -317,7 +326,7 @@
 </script>
         <script type="text/template" id="idol-base-template">
             <div style="position:relative;top:-20px;padding-top:24px;height:312px;margin-bottom:-143px;">
-<div style="background-image:url(<%- idol_image_bg_attribute[idol_detail.data.rarity][idol_detail.data.attribute.substr(0, 2)] %>);background-size:320px;position:absolute;top:0;width:100%;height:100%;"></div><% if(idol_detail.data.rarity <= 2) { %><% opacity = 0.5 %><% } else if (idol_detail.data.rarity <= 4) { %><% opacity = 0.6 %><% } else { %><% opacity = 0 %><% } %><div style="background:white;width:100%;height:100%;opacity:<%- opacity %>;position:absolute;top:0;"></div><div class="displayBox m-Top5 t-Lft" style="width:304px;position:relative;"><div class="t-Lft" style="width:50%"><% if(idol_detail.is_exist_archive) { %><a class="js_btn_expansion"><img src='<%- idol_image %>' style="width:148px;height:185px;box-shadow: 2px 2px 2px #555555;" /></a><% } else { %><img src='../../image_sp/ui/blank_l.jpg' style="width:148px;height:185px;box-shadow: 2px 2px 2px #555555;" /><% } %></div><div class="t-Rft" style="width:50%"><div class="detail_idol_name_plate_<%- idol_detail.data.attribute %>"><div class="detail_idol_alias_name"><%- idol_detail.data.alias_name %></div><div class="detail_idol_real_name" <% if(idol_detail.data.alias_name == "") { %>style="top:19px;"<% } %>><%- idol_detail.data.real_name %></div></div><div class="detail_idol_num_<%- idol_detail.data.attribute %>"><div class="detail_idol_register_num"><span class="yellow">38</span> / 38</div><div class="detail_idol_love_num"><span class="yellow">38</span> / 38</div></div><% if(birthday_flag) { %><div class="icon_birthday"></div><% } %><% if(+idol_detail.archive.premium && +idol_detail.archive.normal) { %><% if(idol_detail.show_card_type == "l_premium") { %><a id="btn_normal_sign" class="js_btn_change_card_type"></a><% } else { %><a id="btn_premium_sign" class="js_btn_change_card_type"></a><% } %><% } %></div></div></div>
+<div style="background-image:url(<%- idol_image_bg_attribute[idol_detail.data.rarity][idol_detail.data.attribute.substr(0, 2)] %>);background-size:320px;position:absolute;top:0;width:100%;height:100%;"></div><% if(idol_detail.data.rarity <= 2) { %><% opacity = 0.5 %><% } else if (idol_detail.data.rarity <= 4) { %><% opacity = 0.6 %><% } else { %><% opacity = 0 %><% } %><div style="background:white;width:100%;height:100%;opacity:<%- opacity %>;position:absolute;top:0;"></div><div class="displayBox m-Top5 t-Lft" style="width:304px;position:relative;"><div class="t-Lft" style="width:50%"><% if(idol_detail.is_exist_archive) { %><a class="js_btn_expansion"><img src='<%- idol_image %>' style="width:148px;height:185px;box-shadow: 2px 2px 2px #555555;" /></a><% } else { %><img src='../../image_sp/ui/blank_l.jpg' style="width:148px;height:185px;box-shadow: 2px 2px 2px #555555;" /><% } %></div><div class="t-Rft" style="width:50%"><div class="detail_idol_name_plate_<%- idol_detail.data.attribute %>"><div class="detail_idol_alias_name"><%- idol_detail.data.alias_name %></div><div class="detail_idol_real_name" <% if(idol_detail.data.alias_name == "") { %>style="top:19px;"<% } %>><%- idol_detail.data.real_name %></div></div><div class="detail_idol_num_<%- idol_detail.data.attribute %>"><div class="detail_idol_register_num"><span class="yellow">42</span> / 42</div><div class="detail_idol_love_num"><span class="yellow">42</span> / 42</div></div><% if(birthday_flag) { %><div class="icon_birthday"></div><% } %><% if(+idol_detail.archive.premium && +idol_detail.archive.normal) { %><% if(idol_detail.show_card_type == "l_premium") { %><a id="btn_normal_sign" class="js_btn_change_card_type"></a><% } else { %><a id="btn_premium_sign" class="js_btn_change_card_type"></a><% } %><% } %></div></div></div>
 </script>
         <script type="text/template" id="profile-template">
             <section class="idolProfile deck m-Btm5">
@@ -3762,6 +3771,165 @@ kg
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[星祭りの夜]鷺沢文香",
+                        "rarity": "5",
+                        "cost": "27",
+                        "attribute": "cool",
+                        "skill_name": "秘めた言の葉",
+                        "skill_effect": "ｸｰﾙ･ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻守 究極+ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "8160",
+                        "default_defense": "8060",
+                        "hash_card_id": "eb1e52fa248802bb910f70f31f614e2f",
+                        "alias_name": "星祭りの夜",
+                        "real_name": "鷺沢文香"
+                    },
+                    "profile": {
+                        "card_id": "2471301",
+                        "card_name": "[星祭りの夜]鷺沢文香",
+                        "card_kana": "さぎさわふみか",
+                        "card_age": "19",
+                        "card_from": "長野",
+                        "card_height": "162",
+                        "card_weight": "45",
+                        "card_bust": "84",
+                        "card_waist": "54",
+                        "card_hip": "81",
+                        "card_birthday": "10月27日",
+                        "card_constellation": "蠍座",
+                        "card_blood": "AB",
+                        "card_arm": "右",
+                        "card_hobby": "本屋めぐり・栞作り",
+                        "card_cv": "M・A・O"
+                    },
+                    "comments": {
+                        "comment": "…短冊には､今の私の想いを綴りました｡先人たちが続けてきたように…あまねく宙へ､願いを込めて｡これから先の永い時を､OOさんと共にふたり､輝き続けられますように…と",
+                        "comments_my_1": "…宙へ想いを｡星には､祈りを",
+                        "comments_my_2": "ひらひらと…儚げに揺れて…",
+                        "comments_my_3": "…一片の夢が笹を彩って…綺麗",
+                        "comments_my_4": "…もう少し､傍に寄っても? ええ､引き離されないように､と…",
+                        "comments_my_max": "…浸っておりました…鈴の音と､貴方の体温が､心地よく…",
+                        "comments_work_1": "輝きを､永遠にしましょう…",
+                        "comments_work_2": "…私の願いも､お見せします",
+                        "comments_work_3": "芸事の上達も､祈りましょうか",
+                        "comments_work_4": "光とせせらぎの調和が美しく…まるで､別世界に来たようです",
+                        "comments_work_max": "七夕の夜に､連れ立って…ふふ､伝説をなぞらえているようです",
+                        "comments_work_love_up": "…見守っていてください｡ふたりで願いを叶える､私たちの姿を",
+                        "comments_live": "…心躍る､静かな夜ですね",
+                        "comments_love_max": "天へ捧げた､私とOOさんの願いの言の葉…旅の果てに､成就した暁には…宙で､ふたつの星の花が咲くことでしょう"
+                    },
+                    "voice": {
+                        "comment": "../../sound/2471301/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2471301/my_1.mp3",
+                        "comments_my_2": "../../sound/2471301/my_2.mp3",
+                        "comments_my_3": "../../sound/2471301/my_3.mp3",
+                        "comments_my_4": "../../sound/2471301/my_4.mp3",
+                        "comments_my_max": "../../sound/2471301/my_max.mp3",
+                        "comments_work_1": "../../sound/2471301/work_1.mp3",
+                        "comments_work_2": "../../sound/2471301/work_2.mp3",
+                        "comments_work_3": "../../sound/2471301/work_3.mp3",
+                        "comments_work_4": "../../sound/2471301/work_4.mp3",
+                        "comments_work_max": "../../sound/2471301/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2471301/work_love_up.mp3",
+                        "comments_live": "../../sound/2471301/live.mp3",
+                        "comments_love_max": "../../sound/2471301/love_max.mp3"
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8E%E3%81%95%E3%82%8F%E3%81%B5%E3%81%BF%E3%81%8B",
+                    "premium_sign_idol_base_id": "89",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/89_sign_effect",
+                    "archive": {
+                        "normal": "1",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[星祭りの夜]鷺沢文香+",
+                        "rarity": "6",
+                        "cost": "27",
+                        "attribute": "cool",
+                        "skill_name": "秘めた言の葉",
+                        "skill_effect": "ｸｰﾙ･ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻守 究極+ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "9792",
+                        "default_defense": "9672",
+                        "skill_effect_2": "ｸｰﾙ･ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻守 小ｱｯﾌﾟ",
+                        "hash_card_id": "deb86c33533a3f46be232e676e1ee678",
+                        "alias_name": "星祭りの夜",
+                        "real_name": "鷺沢文香+"
+                    },
+                    "profile": {
+                        "card_id": "2571302",
+                        "card_name": "[星祭りの夜]鷺沢文香+",
+                        "card_kana": "さぎさわふみか",
+                        "card_age": "19",
+                        "card_from": "長野",
+                        "card_height": "162",
+                        "card_weight": "45",
+                        "card_bust": "84",
+                        "card_waist": "54",
+                        "card_hip": "81",
+                        "card_birthday": "10月27日",
+                        "card_constellation": "蠍座",
+                        "card_blood": "AB",
+                        "card_arm": "右",
+                        "card_hobby": "本屋めぐり・栞作り",
+                        "card_cv": "M・A・O"
+                    },
+                    "comments": {
+                        "comment": "…遙か遠い昔から､大地を照らし､願いを聞き届けた天の川…その輝きに劣らぬよう､私も今宵､ひとつの星となり舞いましょう…たったひとりの…貴方の願いを叶えるための､ｱｲﾄﾞﾙの星に",
+                        "comments_my_1": "…宙へ想いを｡星には､祈りを",
+                        "comments_my_2": "ひらひらと…儚げに揺れて…",
+                        "comments_my_3": "届けます｡たとえ､遙か遠くとも",
+                        "comments_my_4": "…少し､欲が出てしまいました｡あの星の川より､輝きたい…と",
+                        "comments_my_max": "強く瞬き､人を惹きつける牽牛星…まるで､貴方のようですね",
+                        "comments_work_1": "輝きを､永遠にしましょう…",
+                        "comments_work_2": "…私の願いも､お見せします",
+                        "comments_work_3": "…幻想と風流に､身を任せて",
+                        "comments_work_4": "…雅びやかに､舞ってみせます…織姫と彦星が､見ていますから",
+                        "comments_work_max": "お待ちしております…ただ一夜､貴方と逢える､その時を…",
+                        "comments_work_love_up": "…織姫と彦星にも､寄り添ってくれるﾌﾟﾛﾃﾞｭｰｻｰがいたなら…",
+                        "comments_live": "星と大地を､結びましょう",
+                        "comments_love_max": "私が織女星だとしたら…結末はきっと違うものになるでしょうね｡…寄り添い､導いてくれるOOさんがいますから"
+                    },
+                    "voice": {
+                        "comment": "../../sound/2571302/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2571302/my_1.mp3",
+                        "comments_my_2": "../../sound/2571302/my_2.mp3",
+                        "comments_my_3": "../../sound/2571302/my_3.mp3",
+                        "comments_my_4": "../../sound/2571302/my_4.mp3",
+                        "comments_my_max": "../../sound/2571302/my_max.mp3",
+                        "comments_work_1": "../../sound/2571302/work_1.mp3",
+                        "comments_work_2": "../../sound/2571302/work_2.mp3",
+                        "comments_work_3": "../../sound/2571302/work_3.mp3",
+                        "comments_work_4": "../../sound/2571302/work_4.mp3",
+                        "comments_work_max": "../../sound/2571302/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2571302/work_love_up.mp3",
+                        "comments_live": "../../sound/2571302/live.mp3",
+                        "comments_love_max": "../../sound/2571302/love_max.mp3"
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8E%E3%81%95%E3%82%8F%E3%81%B5%E3%81%BF%E3%81%8B",
+                    "premium_sign_idol_base_id": "89",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/89_sign_effect",
+                    "archive": {
+                        "normal": "1",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
                 }];
                 idol.idol_story_list = [{
                     "story_id": "466",
@@ -4119,7 +4287,9 @@ kg
                           "../../image_sp/card_sign_b/l/fumika_37.jpg", 
                           "../../image_sp/card_sign_b/l/fumika_38.jpg", 
                           "../../image_sp/card_sign_b/l/fumika_39.jpg", 
-                          "../../image_sp/card_sign_b/l/fumika_40.jpg"],
+                          "../../image_sp/card_sign_b/l/fumika_40.jpg", 
+                          "../../image_sp/card_sign_b/l/fumika_41.jpg", 
+                          "../../image_sp/card_sign_b/l/fumika_42.jpg"],
                     "l_premium": {
                         "4": "../../image_sp/card_sign_p/l/fumika_05.jpg",
                         "5": "../../image_sp/card_sign_p/l/fumika_06.jpg",
@@ -4156,7 +4326,9 @@ kg
                         "36": "../../image_sp/card_sign_p/l/fumika_37.jpg",
                         "37": "../../image_sp/card_sign_p/l/fumika_38.jpg",
                         "38": "../../image_sp/card_sign_p/l/fumika_39.jpg",
-                        "39": "../../image_sp/card_sign_p/l/fumika_40.jpg"
+                        "39": "../../image_sp/card_sign_p/l/fumika_40.jpg",
+                        "40": "../../image_sp/card_sign_p/l/fumika_41.jpg",
+                        "41": "../../image_sp/card_sign_p/l/fumika_42.jpg"
                     },
                     "l_nosign": ["", "", "", "", 
                                  "../../image_sp/card/l/fumika_05.jpg", 
@@ -4194,7 +4366,9 @@ kg
                                  "../../image_sp/card/l/fumika_37.jpg", 
                                  "../../image_sp/card/l/fumika_38.jpg", 
                                  "../../image_sp/card/l/fumika_39.jpg", 
-                                 "../../image_sp/card/l/fumika_40.jpg"],
+                                 "../../image_sp/card/l/fumika_40.jpg", 
+                                 "../../image_sp/card/l/fumika_41.jpg", 
+                                 "../../image_sp/card/l/fumika_42.jpg"],
                     "l_nosign_p": {
                         "4": "../../image_sp/card_sign_no_p/l/fumika_05.jpg",
                         "5": "../../image_sp/card_sign_no_p/l/fumika_06.jpg",
@@ -4231,7 +4405,9 @@ kg
                         "36": "../../image_sp/card_sign_no_p/l/fumika_37.jpg",
                         "37": "../../image_sp/card_sign_no_p/l/fumika_38.jpg",
                         "38": "../../image_sp/card_sign_no_p/l/fumika_39.jpg",
-                        "39": "../../image_sp/card_sign_no_p/l/fumika_40.jpg"
+                        "39": "../../image_sp/card_sign_no_p/l/fumika_40.jpg",
+                        "40": "../../image_sp/card_sign_no_p/l/fumika_41.jpg",
+                        "41": "../../image_sp/card_sign_no_p/l/fumika_42.jpg"
                     },
                     "l_noframe": [null, null, null, null, 
                                   "../../image_sp/card/l_noframe/fumika_05.jpg", 
@@ -4269,7 +4445,9 @@ kg
                                   "../../image_sp/card/l_noframe/fumika_37.jpg", 
                                   "../../image_sp/card/l_noframe/fumika_38.jpg", 
                                   "../../image_sp/card/l_noframe/fumika_39.jpg", 
-                                  "../../image_sp/card/l_noframe/fumika_40.jpg"],
+                                  "../../image_sp/card/l_noframe/fumika_40.jpg", 
+                                  "../../image_sp/card/l_noframe/fumika_41.jpg", 
+                                  "../../image_sp/card/l_noframe/fumika_42.jpg"],
                     "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
                                "../../image_sp/card/mask_l/45b089ee2ddc60f26d271e1e0a86e0df.png", 
                                "../../image_sp/card/mask_l/1bfbf5c344ce17e6e86444dbb72154d6.png"],
@@ -4550,6 +4728,8 @@ kg
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/2467001_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/2567002_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src="../../js/underscore-min.js"></script>
         <script src="../../js/backbone-min.js"></script>
         <script src="../../js/ilibrary.js" type="text/javascript"></script>
