--- a/idol_gallery/idol_detail/fumika.html
+++ b/idol_gallery/idol_detail/fumika.html
@@ -4450,10 +4450,10 @@ kg
                                   "../../image_sp/card/l_noframe/fumika_42.jpg"],
                     "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
                                "../../image_sp/card/mask_l/45b089ee2ddc60f26d271e1e0a86e0df.png", 
-                               "../../image_sp/card/mask_l/1bfbf5c344ce17e6e86444dbb72154d6.png"],
+                               "../../image_sp/card/mask_l/1bfbf5c344ce17e6e86444dbb72154d6.png", "", "", "", ""],
                     "mask_l2": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
                                 "../../image_sp/card/mask_l2/45b089ee2ddc60f26d271e1e0a86e0df.png", 
-                                "../../image_sp/card/mask_l2/1bfbf5c344ce17e6e86444dbb72154d6.png"],
+                                "../../image_sp/card/mask_l2/1bfbf5c344ce17e6e86444dbb72154d6.png", "", "", "", ""],
                     "mask_l_p": {
                         "36": "../../image_sp/card/mask_l_p/45b089ee2ddc60f26d271e1e0a86e0df.png",
                         "37": "../../image_sp/card/mask_l_p/1bfbf5c344ce17e6e86444dbb72154d6.png"
