--- a/idol_gallery/idol_detail/fumika_k.html
+++ b/idol_gallery/idol_detail/fumika_k.html
@@ -227,6 +227,14 @@
                         </div>
                     </div>
                 </li>
+                <li style="width: 318px;padding-left: 2px">
+                    <div class="displayBox">
+                        <div class="idol" style="background:url(../../image_sp/card/xs/fumika_41.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="40">
+                        </div>
+                        <div class="idol" style="background:url(../../image_sp/card/xs/fumika_42.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="41">
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
         <ol class="icon_navi" style="position:relative;margin-bottom: -1px;margin-top: -7px;">
@@ -238,6 +246,7 @@
             <li><a>6</a></li>
             <li><a>7</a></li>
             <li><a>8</a></li>
+            <li><a>9</a></li>
         </ol>
         <div id="tab-content" style="position:relative;z-index:1">
         </div>
@@ -3757,6 +3766,165 @@ kg
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[칠석제의 밤]사기사와 후미카",
+                        "rarity": "5",
+                        "cost": "27",
+                        "attribute": "cool",
+                        "skill_name": "간직한 말",
+                        "skill_effect": "쿨･패션 프론트 멤버 및 백멤버 상위 5인의 공수 궁극+ 업",
+                        "grow_idol_flag": "",
+                        "default_attack": "8160",
+                        "default_defense": "8060",
+                        "hash_card_id": "eb1e52fa248802bb910f70f31f614e2f",
+                        "alias_name": "칠석제의 밤",
+                        "real_name": "사기사와 후미카"
+                    },
+                    "profile": {
+                        "card_id": "2471301",
+                        "card_name": "[星祭りの夜]鷺沢文香",
+                        "card_kana": "사기사와 후미카",
+                        "card_age": "19",
+                        "card_from": "나가노",
+                        "card_height": "162",
+                        "card_weight": "45",
+                        "card_bust": "84",
+                        "card_waist": "54",
+                        "card_hip": "81",
+                        "card_birthday": "10월 27일",
+                        "card_constellation": "전갈자리",
+                        "card_blood": "AB",
+                        "card_arm": "오른쪽",
+                        "card_hobby": "서점 순례・책갈피 만들기",
+                        "card_cv": "M・A・O"
+                    },
+                    "comments": {
+                        "comment": "…탄자쿠에는, 지금 저의 마음을 적었습니다. 선인들이 계속해 온 것처럼… 하늘에 널리, 소원을 담아. 앞으로의 오랜 시간을, OO 씨와 함께 둘이서, 계속 빛날 수 있기를… 이라고.",
+                        "comments_my_1": "…하늘에 마음을. 별에는, 기도를.",
+                        "comments_my_2": "팔랑팔랑… 덧없이 흔들리며…",
+                        "comments_my_3": "…한 조각의 꿈이 조릿대를 수놓아서… 아름다워.",
+                        "comments_my_4": "…조금만 더, 곁에 다가가도? 네, 떼어 놓지 못하도록, 하려고…",
+                        "comments_my_max": "…빠져들어 있었습니다… 방울 소리와, 당신의 체온이, 기분 좋게…",
+                        "comments_work_1": "반짝임을, 영원히 하죠…",
+                        "comments_work_2": "…저의 소원도, 보여드리겠습니다.",
+                        "comments_work_3": "예능 능력의 향상도, 기도할까요.",
+                        "comments_work_4": "빛과 강물 소리의 조화가 아름다워… 마치 별세계에 온 것 같습니다.",
+                        "comments_work_max": "칠석의 밤에, 동행해서… 후후, 전설을 본뜨고 있는 것 같습니다.",
+                        "comments_work_love_up": "…지켜봐 주세요. 둘이서 소원을 이루는, 저희의 모습을.",
+                        "comments_live": "…마음이 뛰는, 고요한 밤이네요.",
+                        "comments_love_max": "하늘에 바친, 저와 OO 씨의 소원의 말… 여행의 끝에, 성취한 새벽엔… 하늘에서, 두 별의 꽃이 피는 거겠죠."
+                    },
+                    "voice": {
+                        "comment": "../../sound/2471301/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2471301/my_1.mp3",
+                        "comments_my_2": "../../sound/2471301/my_2.mp3",
+                        "comments_my_3": "../../sound/2471301/my_3.mp3",
+                        "comments_my_4": "../../sound/2471301/my_4.mp3",
+                        "comments_my_max": "../../sound/2471301/my_max.mp3",
+                        "comments_work_1": "../../sound/2471301/work_1.mp3",
+                        "comments_work_2": "../../sound/2471301/work_2.mp3",
+                        "comments_work_3": "../../sound/2471301/work_3.mp3",
+                        "comments_work_4": "../../sound/2471301/work_4.mp3",
+                        "comments_work_max": "../../sound/2471301/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2471301/work_love_up.mp3",
+                        "comments_live": "../../sound/2471301/live.mp3",
+                        "comments_love_max": "../../sound/2471301/love_max.mp3"
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8E%E3%81%95%E3%82%8F%E3%81%B5%E3%81%BF%E3%81%8B",
+                    "premium_sign_idol_base_id": "89",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/89_sign_effect",
+                    "archive": {
+                        "normal": "1",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[칠석제의 밤]사기사와 후미카+",
+                        "rarity": "6",
+                        "cost": "27",
+                        "attribute": "cool",
+                        "skill_name": "간직한 말",
+                        "skill_effect": "쿨･패션 프론트 멤버 및 백멤버 상위 5인의 공수 궁극+ 업",
+                        "grow_idol_flag": "",
+                        "default_attack": "9792",
+                        "default_defense": "9672",
+                        "skill_effect_2": "쿨･패션 프론트 멤버 및 백멤버 상위 5인의 공수 소 업",
+                        "hash_card_id": "deb86c33533a3f46be232e676e1ee678",
+                        "alias_name": "칠석제의 밤",
+                        "real_name": "사기사와 후미카+"
+                    },
+                    "profile": {
+                        "card_id": "2571302",
+                        "card_name": "[星祭りの夜]鷺沢文香+",
+                        "card_kana": "사기사와 후미카",
+                        "card_age": "19",
+                        "card_from": "나가노",
+                        "card_height": "162",
+                        "card_weight": "45",
+                        "card_bust": "84",
+                        "card_waist": "54",
+                        "card_hip": "81",
+                        "card_birthday": "10월 27일",
+                        "card_constellation": "전갈자리",
+                        "card_blood": "AB",
+                        "card_arm": "오른쪽",
+                        "card_hobby": "서점 순례・책갈피 만들기",
+                        "card_cv": "M・A・O"
+                    },
+                    "comments": {
+                        "comment": "…아득히 먼 옛날부터, 대지를 비추고, 소원을 들어준 은하수… 그 반짝임에 못지 않게, 저도 오늘 밤, 하나의 별이 되어 춤추죠… 오직 한 사람의… 당신의 소원을 이루기 위한, 아이돌의 별로.",
+                        "comments_my_1": "…하늘에 마음을. 별에는, 기도를.",
+                        "comments_my_2": "팔랑팔랑… 덧없이 흔들리며…",
+                        "comments_my_3": "전하겠습니다. 비록, 아득히 멀더라도.",
+                        "comments_my_4": "…조금, 욕심이 생겨버렸습니다. 저 별의 강보다, 빛나고 싶다… 고.",
+                        "comments_my_max": "강하게 반짝이며, 사람을 끌어당기는 견우성… 마치, 당신 같네요.",
+                        "comments_work_1": "반짝임을, 영원히 하죠…",
+                        "comments_work_2": "…저의 소원도, 보여드리겠습니다.",
+                        "comments_work_3": "…환상과 풍류에, 몸을 맡기며.",
+                        "comments_work_4": "…우아하게, 춤춰 보이겠습니다. …직녀와 견우성이, 보고 있으니까요.",
+                        "comments_work_max": "기다리고 있겠습니다… 단 하룻밤, 당신을 만날 수 있는, 그 때를…",
+                        "comments_work_love_up": "…직녀와 견우성에게도, 다가와줄 프로듀서가 있었다면…",
+                        "comments_live": "별과 대지를, 잇죠.",
+                        "comments_love_max": "제가 직녀성이라면… 결말은 분명 다르게 되겠죠. …다가와서, 이끌어줄 OO 씨가 있으니까요."
+                    },
+                    "voice": {
+                        "comment": "../../sound/2571302/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2571302/my_1.mp3",
+                        "comments_my_2": "../../sound/2571302/my_2.mp3",
+                        "comments_my_3": "../../sound/2571302/my_3.mp3",
+                        "comments_my_4": "../../sound/2571302/my_4.mp3",
+                        "comments_my_max": "../../sound/2571302/my_max.mp3",
+                        "comments_work_1": "../../sound/2571302/work_1.mp3",
+                        "comments_work_2": "../../sound/2571302/work_2.mp3",
+                        "comments_work_3": "../../sound/2571302/work_3.mp3",
+                        "comments_work_4": "../../sound/2571302/work_4.mp3",
+                        "comments_work_max": "../../sound/2571302/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2571302/work_love_up.mp3",
+                        "comments_live": "../../sound/2571302/live.mp3",
+                        "comments_love_max": "../../sound/2571302/love_max.mp3"
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8E%E3%81%95%E3%82%8F%E3%81%B5%E3%81%BF%E3%81%8B",
+                    "premium_sign_idol_base_id": "89",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/89_sign_effect",
+                    "archive": {
+                        "normal": "1",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
                 }];
                 idol.idol_story_list = [{
                     "story_id": "466",
@@ -4114,7 +4282,9 @@ kg
                           "../../image_sp/card_sign_b/l/fumika_37.jpg", 
                           "../../image_sp/card_sign_b/l/fumika_38.jpg", 
                           "../../image_sp/card_sign_b/l/fumika_39.jpg", 
-                          "../../image_sp/card_sign_b/l/fumika_40.jpg"],
+                          "../../image_sp/card_sign_b/l/fumika_40.jpg", 
+                          "../../image_sp/card_sign_b/l/fumika_41.jpg", 
+                          "../../image_sp/card_sign_b/l/fumika_42.jpg"],
                     "l_premium": {
                         "4": "../../image_sp/card_sign_p/l/fumika_05.jpg",
                         "5": "../../image_sp/card_sign_p/l/fumika_06.jpg",
@@ -4151,7 +4321,9 @@ kg
                         "36": "../../image_sp/card_sign_p/l/fumika_37.jpg",
                         "37": "../../image_sp/card_sign_p/l/fumika_38.jpg",
                         "38": "../../image_sp/card_sign_p/l/fumika_39.jpg",
-                        "39": "../../image_sp/card_sign_p/l/fumika_40.jpg"
+                        "39": "../../image_sp/card_sign_p/l/fumika_40.jpg",
+                        "40": "../../image_sp/card_sign_p/l/fumika_41.jpg",
+                        "41": "../../image_sp/card_sign_p/l/fumika_42.jpg"
                     },
                     "l_nosign": ["", "", "", "", 
                                  "../../image_sp/card/l/fumika_05.jpg", 
@@ -4189,7 +4361,9 @@ kg
                                  "../../image_sp/card/l/fumika_37.jpg", 
                                  "../../image_sp/card/l/fumika_38.jpg", 
                                  "../../image_sp/card/l/fumika_39.jpg", 
-                                 "../../image_sp/card/l/fumika_40.jpg"],
+                                 "../../image_sp/card/l/fumika_40.jpg", 
+                                 "../../image_sp/card/l/fumika_41.jpg", 
+                                 "../../image_sp/card/l/fumika_42.jpg"],
                     "l_nosign_p": {
                         "4": "../../image_sp/card_sign_no_p/l/fumika_05.jpg",
                         "5": "../../image_sp/card_sign_no_p/l/fumika_06.jpg",
@@ -4226,7 +4400,9 @@ kg
                         "36": "../../image_sp/card_sign_no_p/l/fumika_37.jpg",
                         "37": "../../image_sp/card_sign_no_p/l/fumika_38.jpg",
                         "38": "../../image_sp/card_sign_no_p/l/fumika_39.jpg",
-                        "39": "../../image_sp/card_sign_no_p/l/fumika_40.jpg"
+                        "39": "../../image_sp/card_sign_no_p/l/fumika_40.jpg",
+                        "40": "../../image_sp/card_sign_no_p/l/fumika_41.jpg",
+                        "41": "../../image_sp/card_sign_no_p/l/fumika_42.jpg"
                     },
                     "l_noframe": [null, null, null, null, 
                                   "../../image_sp/card/l_noframe/fumika_05.jpg", 
@@ -4264,13 +4440,15 @@ kg
                                   "../../image_sp/card/l_noframe/fumika_37.jpg", 
                                   "../../image_sp/card/l_noframe/fumika_38.jpg", 
                                   "../../image_sp/card/l_noframe/fumika_39.jpg", 
-                                  "../../image_sp/card/l_noframe/fumika_40.jpg"],
+                                  "../../image_sp/card/l_noframe/fumika_40.jpg", 
+                                  "../../image_sp/card/l_noframe/fumika_41.jpg", 
+                                  "../../image_sp/card/l_noframe/fumika_42.jpg"],
                     "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
                                "../../image_sp/card/mask_l/45b089ee2ddc60f26d271e1e0a86e0df.png", 
-                               "../../image_sp/card/mask_l/1bfbf5c344ce17e6e86444dbb72154d6.png"],
+                               "../../image_sp/card/mask_l/1bfbf5c344ce17e6e86444dbb72154d6.png", "", "", "", ""],
                     "mask_l2": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
                                 "../../image_sp/card/mask_l2/45b089ee2ddc60f26d271e1e0a86e0df.png", 
-                                "../../image_sp/card/mask_l2/1bfbf5c344ce17e6e86444dbb72154d6.png"],
+                                "../../image_sp/card/mask_l2/1bfbf5c344ce17e6e86444dbb72154d6.png", "", "", "", ""],
                     "mask_l_p": {
                         "36": "../../image_sp/card/mask_l_p/45b089ee2ddc60f26d271e1e0a86e0df.png",
                         "37": "../../image_sp/card/mask_l_p/1bfbf5c344ce17e6e86444dbb72154d6.png"
@@ -4318,7 +4496,9 @@ kg
                            "../../image_sp/card/xs/fumika_37.jpg", 
                            "../../image_sp/card/xs/fumika_38.jpg", 
                            "../../image_sp/card/xs/fumika_39.jpg", 
-                           "../../image_sp/card/xs/fumika_40.jpg"],
+                           "../../image_sp/card/xs/fumika_40.jpg", 
+                           "../../image_sp/card/xs/fumika_41.jpg", 
+                           "../../image_sp/card/xs/fumika_42.jpg"],
                     "m2": ["../../image_sp/card/m2/fumika_01.jpg", 
                            "../../image_sp/card/m2/fumika_02.jpg", 
                            "../../image_sp/card/m2/fumika_03.jpg", 
@@ -4358,7 +4538,9 @@ kg
                            "../../image_sp/card/m2/fumika_37.jpg", 
                            "../../image_sp/card/m2/fumika_38.jpg", 
                            "../../image_sp/card/m2/fumika_39.jpg", 
-                           "../../image_sp/card/m2/fumika_40.jpg"],
+                           "../../image_sp/card/m2/fumika_40.jpg", 
+                           "../../image_sp/card/m2/fumika_41.jpg", 
+                           "../../image_sp/card/m2/fumika_42.jpg"],
                     "quest": ["../../image_sp/card/quest/fumika_01.png", 
                               "../../image_sp/card/quest/fumika_02.png", 
                               "../../image_sp/card/quest/fumika_03.png", 
@@ -4398,7 +4580,9 @@ kg
                               "../../image_sp/card/quest/fumika_37.jpg", 
                               "../../image_sp/card/quest/fumika_38.jpg", 
                               "../../image_sp/card/quest/fumika_39.jpg", 
-                              "../../image_sp/card/quest/fumika_40.jpg"]
+                              "../../image_sp/card/quest/fumika_40.jpg", 
+                              "../../image_sp/card/quest/fumika_41.jpg", 
+                              "../../image_sp/card/quest/fumika_42.jpg"]
                 };
                 idol.ios_app_flg = false;
                 idol.apple_review = null;
